overflow x issue fixed

--- a/src/App.css
+++ b/src/App.css
@@ -10,20 +10,16 @@
   --fonts-softSans: Marlin Soft SQ, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 
 body {
   color: var(--text-color);
   margin: 0;
   height: 100vh;
-  overflow-x: hidden;
 }
 
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 .button-secondary {
